# VFX2016

./: .gitignore  CMakeLists.txt  README.md
hw1/: .gitignore  HDR.m  gsolve.m  gsolve2.m  myGhost.m  myHDR.m  myImageVariance.m  myMTB.m  myRGB2YUV.m  mySobelEdge.m  myTonemap.m  myYUV2RGB.m
hw2/: .gitignore  README.md
hw2/include/: stitch.h
hw2/src/: blend.cpp  harris.cpp  moravec.cpp  sift.cpp  tm_usage.cpp  warp.cpp
include/: util.h
src/: feature.cpp  main.cpp  util.cpp
